--- a/todolist/src/styles.css
+++ b/todolist/src/styles.css
@@ -180,6 +180,52 @@ main {
   animation: showAnimation 1s forwards;
 }
 
+.input {
+  padding: 10px;
+  border-radius: 15px;
+  outline: none;
+  border: 1px solid rgb(122, 182, 87);
+  font-size: 18px;
+}
+
+.sign-in-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.sign-in-container h1 {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.sign-in-container form {
+  display: flex;
+  flex-direction: column;
+}
+
+.sign-in-container form > * {
+  margin: 0.2rem 0;
+  padding: 0.3rem;
+}
+
+.sign-out-btn {
+  position: absolute;
+  top: 3%;
+  left: 3%;
+  padding: 0.7rem;
+  color: #fff;
+  background: red;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.sign-out-btn:hover {
+  background: rgb(202, 2, 2);
+}
+
 @keyframes closeAnimation {
   from {
     opacity: 1;
