--- a/todolist/src/styles.css
+++ b/todolist/src/styles.css
@@ -65,7 +65,7 @@ main {
 }
 
 /* TODOLIST SECTION */
-.todolist-container {
+.eventlist-container {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   border-radius: 6px;
   text-align: center;
@@ -75,7 +75,7 @@ main {
   min-width: 660px;
 }
 
-.todo-item {
+.event-item {
   min-width: 100px;
   max-width: 200px;
   padding: 10px;
@@ -84,7 +84,7 @@ main {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.35);
 }
 
-.todos-container {
+.events-container {
   display: grid;
   grid-template: auto auto / repeat(5, 1fr);
   gap: 10px;
