--- a/todolist/src/styles.css
+++ b/todolist/src/styles.css
@@ -85,6 +85,7 @@ main {
   border: 1px solid #293264;
   border-radius: 6px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.35);
+  transition: 0.4s;
 }
 
 .events-container {
@@ -191,6 +192,16 @@ main {
   outline: none;
   border: 1px solid rgb(122, 182, 87);
   font-size: 18px;
+}
+
+.user-details-container {
+  position: absolute;
+  top: 3%;
+  left: 3%;
+  background: rgba(41, 50, 100, 0.9);
+  color: #fff;
+  padding: 1rem;
+  border-radius: 5px;
 }
 
 .sign-in-container {
