--- a/event-memo/src/styles.css
+++ b/event-memo/src/styles.css
@@ -97,10 +97,19 @@ main {
 
 .trash-icon {
   cursor: pointer;
+  color: rgb(233, 40, 40);
+  margin-left: 5px;
 }
 
-.trash-icon {
-  color: rgb(233, 40, 40);
+.event-info-icon {
+  cursor: pointer;
+  color: #1b2146;
+  margin-right: 5px;
+}
+
+.trash-icon,
+.event-info-icon {
+  font-size: 1.6rem;
 }
 
 /* INSTRUCTIONS SECTION */
@@ -115,6 +124,8 @@ main {
   color: #fff;
   width: 27%;
   border: 1px solid #1b2146;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .close-btn {
@@ -137,9 +148,9 @@ main {
   font-size: 30px;
   color: #1b2146;
   cursor: pointer;
-  opacity: 0;
+
   transform: translateX(40px);
-  visibility: hidden;
+
   border-radius: 50%;
   transition: 0.4s;
 }
@@ -244,6 +255,44 @@ main {
 
 .sign-out-btn:hover {
   background: rgb(202, 2, 2);
+}
+
+.popup-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.popup-details {
+  background: rgba(9, 16, 104);
+  color: #fff;
+  padding: 1rem;
+  width: 500px;
+  max-width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  border-radius: 0.3rem;
+}
+
+.event-title-close-btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.popup-close-btn {
+  cursor: pointer;
+}
+
+.popup-close-btn:hover {
+  color: rgba(0, 0, 0, 0.9);
 }
 
 @keyframes closeAnimation {
